# diffusionx.cpp

./: .clang-tidy  .clangd  .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  Justfile  LICENSE  README.md  VCPKG_PACKAGING.md  VCPKG_SUMMARY.md  portfile.cmake  usage  vcpkg-configuration.json  vcpkg.json  xmake.lua
.cursor/rules/: module.mdc
cmake/: diffusionx-config.cmake.in  diffusionxConfig.cmake.in
examples/: CMakeLists.txt  README.md  random.cpp  random_number.cpp  stable.cpp  test_modules.cpp
include/: error.h  error.hpp
include/random/: exponential.h  exponential.hpp  gamma.hpp  normal.h  normal.hpp  poisson.h  poisson.hpp  stable.h  uniform.hpp  utils.h  utils.hpp
scripts/: install_vcpkg_port.sh  test_vcpkg.sh
src/: diffusionx.cppm  error.cppm  random.cppm  simulation.cppm
src/random/: exponential.cpp  exponential.cppm  gamma.cppm  normal.cpp  normal.cppm  normal.hpp  poisson.cppm  poisson.hpp  stable.cpp  stable.cppm  uniform.cppm  utils.cppm
src/simulation/: basic.cppm  continuous.cppm  discrete.cppm  point.cppm
src/simulation/basic/: abstract.cppm  circulant_embedding.cppm  continuous.cppm  csv.cppm  csv_output.cppm  discrete.cppm  functional.cppm  moment.cppm  point.cppm  tamsd.cppm  utils.cppm
src/simulation/continuous/: bm.cppm  bng.cppm  brownian_bridge.cppm  brownian_excursion.cppm  brownian_meander.cppm  cauchy.cppm  fbm.cppm  gamma.cppm  geometric_brownian_motion.cppm  langevin.cppm  levy.cppm  levy_walk.cppm  ou.cppm  subordinator.cppm
src/simulation/discrete/: random_walk.cppm
src/simulation/point/: birth_death.cppm  ctrw.cppm  poisson.cppm
test_vcpkg/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
vcpkg-config/: VCPKG_QUICKSTART.md  portfile.cmake  vcpkg.json
